[metadata]
name = anchor
summary = Webservice to auto-sign certificates for short amount of time
description-file =
    README.rst
author = OpenStack Security Group
author-email = openstack-dev@lists.openstack.org
home-page = https://wiki.openstack.org/wiki/Security/Projects/Anchor
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Topic :: Security

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[entry_points]
anchor.signing_backends =
    anchor = anchor.certificate_ops:sign

anchor.validators =
    common_name = anchor.validators.custom:common_name
    alternative_names = anchor.validators.custom:alternative_names
    alternative_names_ip = anchor.validators.custom:alternative_names_ip
    blacklist_names = anchor.validators.custom:blacklist_names
    server_group = anchor.validators.custom:server_group
    extensions = anchor.validators.custom:extensions
    key_usage = anchor.validators.custom:key_usage
    ext_key_usage = anchor.validators.custom:ext_key_usage
    source_cidrs = anchor.validators.custom:source_cidrs
    whitelist_names = anchor.validators.custom:whitelist_names
    public_key = anchor.validators.custom:public_key
    standards_compliance = anchor.validators.standards:standards_compliance

anchor.authentication =
    keystone = anchor.auth.keystone:login
    ldap = anchor.auth.ldap:login
    static = anchor.auth.static:login

anchor.fixups =
    enforce_alternative_names_present = anchor.fixups:enforce_alternative_names_present

[files]
packages =
    anchor
scripts =
    bin/anchor_production
    bin/anchor_debug
